--- a/MVCDemo/Views/Shared/_LayoutAdmin.cshtml
+++ b/MVCDemo/Views/Shared/_LayoutAdmin.cshtml
@@ -54,7 +54,7 @@
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <h1 class="page-header">Dashboard</h1>
                 <div class="row placeholders">
-                    @RenderBody()
+                   @RenderBody() @*填充Body标签内容*@
                 </div>
 
             </div>
