--- a/MVCDemo/Views/Account/Create.cshtml
+++ b/MVCDemo/Views/Account/Create.cshtml
@@ -23,6 +23,7 @@
                 @Html.LabelFor(model => model.UserName)
 
                 @Html.EditorFor(model => model.UserName)
+                @Html.ValidationMessageFor(model => model.UserName)
 
             </div>
 
